# Analog_clockQT

./: CMakeLists.txt  Hour.qml  Second.qml  main.cpp
